<resources>
    <string name="app_name">MvvmSampleProject</string>
    <string name="common_accessibility">모바일 접근성 인증</string>
    <string name="common_next">다음</string>
    <string name="common_start">시작하기</string>
    <string name="common_ok">확인</string>
    <string name="common_ok_btn">확인 버튼</string>
    <string name="common_cancel">취소</string>
    <string name="common_cancel_btn">취소 버튼</string>
    <string name="common_close">닫기</string>
    <string name="common_release">해제하기</string>
    <string name="common_apply">적용</string>
    <string name="common_finish">App 종료</string>
    <string name="common_finish_02">앱 종료</string>
    <string name="common_retry">다시 시도</string>
    <string name="common_change">변경</string>
    <string name="common_login">로그인</string>
    <string name="common_logout">로그아웃</string>
    <string name="common_deny">거부</string>
    <string name="common_permit">허용</string>
    <string name="common_not_allow">허용안함</string>
    <string name="common_dont_show">다시보지 않기</string>
    <string name="common_dont_show_today">하루동안 보지 않기</string>
    <string name="common_ssl_error">SSL 인증서 오류가 발생하였습니다.\n계속 진행 하시겠습니까?</string>
    <string name="common_dot">ㆍ</string>
    <string name="common_exit_app">"마이 케이티를 종료하려면 '뒤로' 버튼을 한번 더 누르세요."</string>
    <string name="common_ocr_retry">재촬영</string>
    <string name="common_registered">등록</string>
    <string name="common_reset">초기화</string>
    <string name="help">도움말</string>
    <string name="next_select">다음에 하기</string>
    <string name="common_info">알림</string>
    <string name="common_error_message_1">비정상적인 접근입니다.</string>
    <string name="permission_title">마이케이티 앱 이용을 위해\n다음 접근권한 허용이 필요합니다.</string>
    <string name="required_permission_title">필수적 접근 권한</string>
    <string name="optional_permission_title">선택적 접근 권한</string>
    <string name="permission_info_title">접근권한 설정안내</string>
    <string name="permission_info_contents">\'설정 > 개인정보보호\'에서 설정 하실 수 있습니다.</string>
    <string name="permission_info_sub">선택적 접근 권한은 해당 기능 이용시 동의를 받고 있으며,\n동의하지 않아도 해당 기능 외 서비스 이용이 가능합니다.</string>
    <string name="permission_call_title">전화</string>
    <string name="permission_call_contents">간편조회 서비스 제공 (로밍 정보 UUID)</string>
    <string name="permission_storege_title">저장</string>
    <string name="permission_storege_contents">위젯 메뉴 이미지 다운로드 저장</string>
    <string name="permission_mic_title">마이크</string>
    <string name="permission_mic_contents">챗봇 음성검색 서비스 제공</string>
    <string name="permission_carmera_title">카메라</string>
    <string name="permission_carmera_contents">신분증, 신용/유심카드 스캔, QR코드</string>
    <string name="permission_contacts_title">주소록</string>
    <string name="permission_contacts_contents">Y박스 친구목록 확인</string>
    <string name="permission_storage_title_os_13">사진 및 동영상</string>
    <string name="permission_contacts_title_os_12">연락처</string>
    <string name="permission_over_layout">다른 앱 위에 표시</string>
    <string name="permission_over_layout_contents">보이는 ARS 등의 화면 서비스 제공</string>
    <string name="permission_notification_layout">알림</string>
    <string name="permission_notification_layout_contents">이용량 PUSH 알림 등 서비스 제공</string>
    <string name="over_layout_info_msg_title">보이는 ARS 등 화면 서비스 이용 안내</string>
    <string name="over_layout_info_msg_1">114 고객센터에 전화 연결 시, 제공되는 \'보이는 ARS\'등 화면 서비스를 위하여 고객님의 정보 제공 동의가 필요합니다.</string>
    <string name="over_layout_info_msg_2">제공된 정보는 마이케이티 포함 이외 기업에서 \'보이는 ARS\'등 화면 서비스 제공을 위하여 사용되며, 동의를 하지 않으셔도 앱의 기본 기능을 사용하는 데는 제약이 없습니다.</string>
    <string name="over_layout_info_msg_3">이용 동의 시 KT 고객센터의 \'보이는 ARS\'등 화면 서비스 이용이 가능합니다.</string>
    <string name="over_layout_info_msg_4">권한 설정 변경 방법 : 디바이스 설정 > 애플리케이션 > 마이 케이티 > 다른 앱 위에 표시 > 권한 허용 ON/OFF</string>
    <string name="over_layout_info_msg_5">3G, 5G, LTE 환경에서 화면 서비스 이용 시 통화료 외에 데이터 요금이 발생할 수 있습니다.</string>
    <string name="over_layout_info_msg_6">※ 3G, 5G, LTE 환경에서 화면 서비스 이용 시 통화료 외에 데이터 요금이 발생할 수 있습니다.</string>
    <string name="permission_accessibility_layout">접근성</string>
    <string name="permission_accessibility_layout_contents">불법 웹사이트 차단 등 스미싱 지킴이 제공</string>
    <string name="permission_battery_optimization_layout">제한없는 배터리 사용</string>
    <string name="permission_battery_optimization_layout_contents">중단없는 스미싱 판별 등 스미싱 지킴이 제공</string>
    <string name="otp_title">1회용 비밀번호</string>
    <string name="otp_remain_second" formatted="false">"유효시간 : %02d초"</string>
    <string name="otp_desc01">kt.com에 접속하여 ID와 1회용 비밀번호로 편리하고 안전하게 로그인 할 수 있습니다.</string>
    <string name="otp_desc02">개인고객 KT 아이디로 로그인 하셔야 서비스 이용이 가능합니다.</string>
    <string name="setting_init_title">설정 초기화 안내</string>
    <string name="setting_init_desc">App을 업데이트하여 고객님의 정보 보호를 위해 아래와 같이 설정을 초기화합니다.\n원하시는 설정 변경 후 확인 버튼을 선택해주세요.</string>
    <string name="setting_init_app_ctn">대표번호 설정</string>
    <string name="setting_init_push_agree">모두 동의 하시면 KT 요금할인, 제휴상품 할인/이벤트 등 다양한 고객 맞춤 혜택 정보를 받으실 수 있습니다.</string>
    <string name="setting_init_pop_push_error_desc">모두 %s하기 진행 중 일시적인 문제로 %s 되지 않은 항목이 있을 수 있습니다. \'설정\' 화면에서 확인 또는 재시도해주세요.</string>
    <string name="setting_init_pop_push_error_submsg">※ 모두 %s하기 진행 중 일시적인 문제로 %s 되지 않은 항목이 있을 수 있습니다. \'설정\' 화면에서 확인 또는 재시도해주세요.</string>
    <string name="setting_title">설정</string>
    <string name="setting_login_info">로그인 정보</string>
    <string name="setting_login_app_ctn">App 사용번호</string>
    <string name="setting_login_sns_id">SNS ID 관리</string>
    <string name="setting_login_change_pw">비밀번호 변경</string>
    <string name="setting_login_gen_otp">1회용 비밀번호 받기</string>
    <string name="setting_home">홈</string>
    <string name="setting_home_big_font">큰 글자로 보기</string>
    <string name="setting_widget">위젯</string>
    <string name="setting_widget_ctn">위젯 조회 번호</string>
    <string name="setting_call_type">음성/기타 통화 선택</string>
    <string name="setting_widget_style">위젯 스타일 설정</string>
    <string name="setting_big_font">글자 크기 설정</string>
    <string name="big_font_text"><u>가</u></string>
    <string name="setting_notify_bar">상단바 조회</string>
    <string name="setting_notify_bar_yn">상단바 이용량 조회</string>
    <string name="setting_notify_bar_ctn">상단바 조회 번호</string>
    <string name="setting_notify_bar_style">상단바 배경색 선택</string>
    <string name="setting_notify_bar_color_default">기본색</string>
    <string name="setting_notify_bar_color_white">흰색</string>
    <string name="setting_notify_bar_color_black">검은색</string>
    <string name="setting_push">PUSH/혜택 알림 설정</string>
    <string name="setting_push_all_yn">모두 동의하기 (모두 선택 항목)</string>
    <string name="setting_push_usage_yn">모바일 이용량 알림</string>
    <string name="setting_push_usage_day">수신 날짜 주기</string>
    <string name="setting_push_usage_ctn">이용량 알림 번호</string>
    <string name="setting_push_alarm_yn">(선택) PUSH 알림 수신</string>
    <string name="setting_person_info_yn">(선택) 개인정보 수집/이용동의</string>
    <string name="setting_ad_info_yn">(선택) 광고성 정보 수신동의/처리위탁</string>
    <string name="setting_push_shop_yn">(선택) 출석 체크 알림 수신</string>
    <string name="setting_detail">상세보기</string>
    <string name="setting_terms_conditions">이용약관 상세보기</string>
    <string name="setting_info">정보</string>
    <string name="setting_info_pin_lock_yn">암호잠금</string>
    <string name="setting_info_change_pin_lock">암호잠금 변경</string>
    <string name="setting_info_pin_lock_sub_text">서로 다른 3자리 숫자 또는 연속되지 않는 숫자를 사용해주세요.</string>
    <string name="shake_barcode_user_name">%s님 멤버십</string>
    <string name="setting_shake_barcode">휴대폰을 흔들면 멤버십 바코드가 열려요</string>
    <string name="shake_barcode_tooltip">흔들어서 멤버십 바코드 열기</string>
    <string name="shake_barcode_tooltip_guide">마이 케이티 이용 중 폰을 흔들면 멤버십 바코드를\n호출할 수 있는 기능입니다.</string>
    <string name="shake_barcode_corp_guide">멤버십 쉐이크 기능은 개인회선에서만 제공하여, 개인회선 멤버십 화면으로 이동합니다.</string>
    <string name="setting_callavo_ars_before">누르는 ARS 사용</string>
    <string name="setting_callavo_ars">보이는 ARS 등 화면 서비스 사용</string>
    <string name="callavo_ars_tooltip">보이는 ARS 등 화면 서비스 안내</string>
    <string name="callavo_ars_tooltip_guide">KT 고객센터 \'보이는 ARS\' 등 화면 서비스를 이용하실때 스마트폰 화면을 보며 쉽고 편리하게 원하는 메뉴를 선택할 수 있는 서비스 입니다.</string>
    <string name="safe_sdk_title">스미싱 지킴이 사용</string>
    <string name="safe_sdk_info">스미싱 지킴이 안내</string>
    <string name="safe_sdk_setting_info_msg_1">문자 또는 카카오톡 메시지 내 URL 링크 클릭 시 스미싱 URL 차단 및 주의 여부를 안내해주는 서비스(㈜플랜티넷 제공)입니다.</string>
    <string name="safe_sdk_setting_info_msg_2">※ 서비스 이용동의 및 권한 설정 후 별도 앱 설치 없이 서비스 이용 가능합니다.</string>
    <string name="safe_sdk_setting_info_msg_3">※ 본 서비스는 배터리 사용량에 영향을 줄 수 있습니다.</string>
    <string name="safe_sdk_setting_popup_title">생체인증 로그인 사용 설정</string>
    <string name="safe_sdk_setting_popup_msg_1">‘마이케이티앱 생체인증 로그인’ 사용을 해제하시겠습니까?</string>
    <string name="safe_sdk_setting_popup_msg_2">※ ‘마이케이티앱 생체인증  로그인’ 사용 여부를 설정하는 메뉴 입니다.</string>
    <string name="safe_sdk_setting_popup_msg_3">※ 생체인증 정보를 삭제하려면 휴대폰 단말 내  설정 메뉴를 이용해주세요.</string>
    <string name="safe_sdk_popup_titel">작업공지안내</string>
    <string name="safe_sdk_popup_msg_1">안정적인 서비스 제공을 위해 ‘스미싱 지킴이’ 시스템 점검 작업이 진행됩니다.</string>
    <string name="safe_sdk_popup_msg_2">보다 나은 고객서비스를 위해 최선을 다하는 마이케이티앱이 되겠습니다.</string>
    <string name="darkmode">화면</string>
    <string name="setting_darkmode">다크 모드 설정</string>
    <string name="setting_darkmode_off">꺼짐</string>
    <string name="setting_darkmode_on">켜짐</string>
    <string name="setting_darkmode_system">시스템 설정 사용</string>
    <string name="setting_support">고객지원</string>
    <string name="setting_support_faq">마이 케이티 앱 FAQ</string>
    <string name="setting_support_license">오픈소스 라이선스</string>
    <string name="setting_support_version">버전 정보</string>
    <string name="cur_version">현재 버전</string>
    <string name="last_version">최신 버전</string>
    <string name="version_info">버전정보</string>
    <string name="latest_version_desc">현재 최신버전입니다.</string>
    <string name="app_update">업데이트</string>
    <string name="pop_set_update_title">업데이트 안내</string>
    <string name="pop_set_basics_update_title">App 업데이트 안내</string>
    <string name="app_finish">앱종료</string>
    <string name="finish">종료</string>
    <string name="pop_set_basics_update_message_1">최신버전으로 업데이트 해주세요.</string>
    <string name="pop_set_basics_update_message_2">[주요 업데이트 내역]</string>
    <string name="pop_set_basics_update_message_3">앱 성능과 안정성이 더욱 향상되었습니다. \n최신 버전의 마이케이티로 업데이트 하시고 다양한 혜택 및 상품 소식까지 한번에 확인하세요.</string>
    <string name="pop_set_update_message_1">마이케이티 앱이</string>
    <string name="pop_set_update_message_2">새로운 버전으로 출시되었습니다.</string>
    <string name="pop_set_update_message_3">고객님들의 의견을 반영하여,\n보다 빠른 속도와 편리한 사용성을 제공합니다.\n지금 바로 업데이트하고 이용해보세요.</string>
    <string name="setting_lock_description">비밀번호 4자리 입력</string>
    <string name="password_input_title">암호 입력</string>
    <string name="password_repeat_title">암호 재입력</string>
    <string name="password_input_desc">암호를 입력해 주세요.</string>
    <string name="password_repeat_desc">확인을 위해서 다시 암호를 입력해 주세요.</string>
    <string name="password_miss_matching_desc">암호가 일치하지 않습니다.\n다시 입력해주세요.</string>
    <string name="password_setting_miss_matching_desc">처음 입력한 암호화 일치하지 않습니다.\n다시 입력해주세요.</string>
    <string name="password_input_pattern_fail">패턴 불일치</string>
    <string name="password_input_pattern_fail_desc">연속되지 않는 3자리 숫자를 사용해주세요.</string>
    <string name="password_input_pattern_fail_temp">서로 다른 3자리 숫자를 사용해주세요.</string>
    <string name="password_change_desc">변경하실 암호를 입력해 주세요.\n서로 다른 3자리 숫자 또는 연속되지 않는 숫자를 사용해주세요.</string>
    <string name="password_change_repeat_desc">확인을 위해서 변경하실 암호를 다시 입력해 주세요.</string>
    <string name="main_tabbar_menu_title">메뉴</string>
    <string name="main_tabbar_benefits_title">혜택</string>
    <string name="main_tabbar_home_title">홈</string>
    <string name="main_tabbar_shop">샵</string>
    <string name="main_tabbar_chatbot">챗봇</string>
    <string name="main_tabbar_menu_title_cd">메뉴 버튼</string>
    <string name="main_tabbar_benefits_title_cd">혜택 버튼</string>
    <string name="main_tabbar_shop_cd">샵 버튼</string>
    <string name="main_tabbar_chatbot_cd">챗봇 버튼</string>
</resources>